<resources>
    <string name="app_name">Android Beginner Class - Dicoding</string>
    <string name="result">Hasil Result</string>
    <string name="calculate">Hitung</string>
    <string name="height">Tinggi</string>
    <string name="width">Lebar</string>
    <string name="length">Panjang</string>

    <string name="move_activity">Pindah Activity</string>
    <string name="move_with_data">Pindah Activity dengan Data/Explicit Intent w/ Data</string>
    <string name="move_with_object">Pindah Activity dengan Object/Intent w/ Parcelable</string>
    <string name="dial_number">Dial a Number</string>
    <string name="move_with_result">Pindah Activity untuk Result</string>
    <string name="result_from_activity">Hasil dari Activity</string>
    <string name="choose_number">Pilih angka yang kamu suka</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="choose">Pilih</string>
    <string name="data_received">Data Diterima</string>
    <string name="object_received">Object Diterima</string>
    <string name="this_is_moveactivity">Ini MoveActivity</string>
    <string name="move_result">Hasil</string>
    <string name="moveResult">Hasil : %1$s</string>
</resources>